npx prettier . --write

--- a/ranked4-frontend/src/app/admin/admin-gifs/admin-gifs.component.scss
+++ b/ranked4-frontend/src/app/admin/admin-gifs/admin-gifs.component.scss
@@ -273,7 +273,7 @@ code {
       gap: 0.5rem;
       cursor: pointer;
 
-      input[type="checkbox"] {
+      input[type='checkbox'] {
         width: 20px;
         height: 20px;
         cursor: pointer;
