--- a/ranked4-frontend/src/app/admin/admin.component.html
+++ b/ranked4-frontend/src/app/admin/admin.component.html
@@ -5,38 +5,29 @@
     <div class="admin-card">
       <h3>Manage Users</h3>
       <p>Create, edit or delete users.</p>
-      
-      <a [routerLink]="['/admin-users']" class="btn btn-primary">
-        Manage users
-      </a>
+
+      <a [routerLink]="['/admin-users']" class="btn btn-primary"> Manage users </a>
     </div>
 
     <div class="admin-card">
       <h3>Manage Skins</h3>
       <p>Create, edit or delete skins.</p>
-      
-      <a [routerLink]="['/admin-skins']" class="btn btn-primary">
-        Manage skins
-      </a>
+
+      <a [routerLink]="['/admin-skins']" class="btn btn-primary"> Manage skins </a>
     </div>
 
     <div class="admin-card">
       <h3>Manage Lootboxes</h3>
       <p>Create, edit or delete lootbox types.</p>
 
-      <a [routerLink]="['/admin-lootboxes']" class="btn btn-primary">
-        Manage lootboxes
-      </a>
+      <a [routerLink]="['/admin-lootboxes']" class="btn btn-primary"> Manage lootboxes </a>
     </div>
 
     <div class="admin-card">
       <h3>Manage GIFs</h3>
       <p>Create, edit or delete GIF reactions.</p>
 
-      <a [routerLink]="['/admin-gifs']" class="btn btn-primary">
-        Manage GIFs
-      </a>
+      <a [routerLink]="['/admin-gifs']" class="btn btn-primary"> Manage GIFs </a>
     </div>
   </div>
-
 </div>
