--- a/ranked4-frontend/src/app/game/matchmaking/matchmaking.component.html
+++ b/ranked4-frontend/src/app/game/matchmaking/matchmaking.component.html
@@ -7,14 +7,11 @@
       {{ elapsedTime }}
     </div>
 
-    <p class="status-message">{{ status }}</p>
+     
+    <p class="status-message">{{ status }}</p>
 
-    <p class="timeout-info">
-      Matchmaking will automatically cancel if no opponent is found after 5 minutes.
-    </p>
+    <p class="timeout-info">Matchmaking will automatically cancel if no opponent is found after 5 minutes.</p>
 
-    <button class="btn btn-cancel" (click)="cancelMatchmaking()">
-      Cancel
-    </button>
+    <button class="btn btn-cancel" (click)="cancelMatchmaking()">Cancel</button>
   </div>
 </div>
