--- a/ranked4-frontend/src/app/game/private-game/private-game.component.scss
+++ b/ranked4-frontend/src/app/game/private-game/private-game.component.scss
@@ -120,7 +120,7 @@ h2 {
   align-items: center;
   gap: 0.75rem;
 
-  input[type="text"] {
+  input[type='text'] {
     padding: 0.5rem 0.75rem;
     border-radius: 6px;
     border: 1px solid var(--border-color);
