--- a/ranked4-frontend/src/app/leaderboard/leaderboard.component.html
+++ b/ranked4-frontend/src/app/leaderboard/leaderboard.component.html
@@ -3,14 +3,11 @@
   @if (leaderboard$ | async; as players) {
     <ol class="leaderboard-list">
       @for (player of players; track playerTrack($index, player); let i = $index) {
-        <li class="leaderboard-item"
-            [class.is-you]="player.userId === currentUserId">
+        <li class="leaderboard-item" [class.is-you]="player.userId === currentUserId">
           <span class="rank">{{ i + 1 }}</span>
 
           @if (player.avatarUrl) {
-            <img [src]="player.avatarUrl"
-                  alt="Avatar"
-                  class="avatar-small">
+            <img [src]="player.avatarUrl" alt="Avatar" class="avatar-small" />
           }
 
           <span class="name">{{ player.displayName }}</span>
